RESOLVED FIXED132905
[GTK][EFL] Video is resumed with old playback rate.
https://bugs.webkit.org/show_bug.cgi?id=132905
Summary [GTK][EFL] Video is resumed with old playback rate.
Piotr Grad
Reported 2014-05-14 06:59:02 PDT
Video is resumed with old playback rate after changing it to '0' and requesting play.
Attachments
Patch & layout test (8.75 KB, patch)
2014-05-14 07:19 PDT, Piotr Grad
no flags
Patch & layout test (8.75 KB, patch)
2014-05-14 07:25 PDT, Piotr Grad
no flags
Patch & layout test (8.76 KB, patch)
2014-05-14 07:34 PDT, Piotr Grad
no flags
Patch & layout test (8.62 KB, patch)
2014-05-21 13:48 PDT, Piotr Grad
no flags
Piotr Grad
Comment 1 2014-05-14 07:19:32 PDT
Created attachment 231447 [details] Patch & layout test
WebKit Commit Bot
Comment 2 2014-05-14 07:20:56 PDT
Attachment 231447 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:410: Missing space before ( in if( [whitespace/parens] [5] ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:565: Missing space before ( in if( [whitespace/parens] [5] ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:623: Missing space before ( in if( [whitespace/parens] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Piotr Grad
Comment 3 2014-05-14 07:25:58 PDT
Created attachment 231449 [details] Patch & layout test
WebKit Commit Bot
Comment 4 2014-05-14 07:28:27 PDT
Attachment 231449 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:565: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Piotr Grad
Comment 5 2014-05-14 07:34:10 PDT
Created attachment 231451 [details] Patch & layout test
Philippe Normand
Comment 6 2014-05-20 00:34:20 PDT
Comment on attachment 231451 [details] Patch & layout test View in context: https://bugs.webkit.org/attachment.cgi?id=231451&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:568 > + if (!rate) { > + return gst_element_seek(m_playBin.get(), 1.0, GST_FORMAT_TIME, seekType, > + GST_SEEK_TYPE_SET, startTime, GST_SEEK_TYPE_SET, endTime); > + } Perhaps this could be if(!rate) rate = 1.0 ?
Piotr Grad
Comment 7 2014-05-21 13:48:49 PDT
Created attachment 231840 [details] Patch & layout test
WebKit Commit Bot
Comment 8 2014-05-22 07:58:29 PDT
Comment on attachment 231840 [details] Patch & layout test Clearing flags on attachment: 231840 Committed r169200: <http://trac.webkit.org/changeset/169200>
WebKit Commit Bot
Comment 9 2014-05-22 07:58:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.